// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`village-card and village-list Component render test renders village-card component correctly 1`] = `
.c0 {
  display: grid;
  border: 1px solid;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 5px;
  margin: 15px;
  grid-template-columns: 40% 60%;
  gap: 1px;
  width: 400px;
  height: 550px;
}

.c1 {
  background-size: 100% 100% !important;
}

.c2 span {
  font-variant: all-small-caps;
}

.c10 {
  cursor: pointer;
}

.c10 span {
  font-variant: all-small-caps;
}

.c10:hover {
  background-color: lightgrey;
  border-radius: 4px;
}

.c4 {
  background-color: Green;
  width: 20px;
  height: 20px;
  margin-left: 10px;
  border-radius: 6px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  margin: 10px 0 !important;
  border-bottom: 1px solid;
}

.c5 span {
  font-variant: all-small-caps;
}

.c8 {
  margin-left: 90px;
}

.c6 {
  margin: 0 15px;
}

.c7 {
  cursor: pointer;
  border-bottom: 1px solid;
  margin-bottom: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  display: none;
}

@media (max-width:767px) {
  .c0 {
    grid-template-columns: auto;
    grid-template-rows: 25% 75%;
    width: 250px;
    height: 650px;
  }
}

@media (max-width:767px) {
  .c2 {
    font-size: 12px !important;
  }
}

@media (max-width:767px) {
  .c10 {
    font-size: 12px !important;
  }
}

@media (max-width:767px) {
  .c4 {
    width: 15px;
    height: 15px;
  }
}

@media (max-width:767px) {
  .c5 {
    font-size: 12px !important;
  }
}

@media (max-width:767px) {
  .c8 {
    margin-left: 120px;
  }
}

<div
  className="MuiPaper-root MuiCard-root c0 MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardMedia-root c1"
    style={
      Object {
        "backgroundImage": "url(\\"http://www.publicdomainpictures.net/pictures/120000/nahled/white-hen.jpg\\")",
      }
    }
  />
  <div
    className=""
  >
    <div
      className="MuiCardContent-root "
    >
      <h2
        className="MuiTypography-root c2 MuiTypography-h6 MuiTypography-gutterBottom"
      >
        Fizkin Voidbuster
      </h2>
      <p
        className="MuiTypography-root c2 MuiTypography-body1"
      >
        <span>
          Age: 
        </span>
        288
      </p>
      <p
        className="MuiTypography-root c2 MuiTypography-body1"
      >
        <span>
          Weight: 
        </span>
        35.279167
      </p>
      <p
        className="MuiTypography-root c2 MuiTypography-body1"
      >
        <span>
          Height: 
        </span>
        110.43628
      </p>
      <div
        className="c3"
      >
        <p
          className="MuiTypography-root c2 MuiTypography-body1"
        >
          <span>
            Hair Color: 
          </span>
          Green
        </p>
        <div
          className="c4"
          color="Green"
        />
      </div>
      <p
        className="MuiTypography-root c5 MuiTypography-body1"
      >
        Friends
      </p>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
        onClick={[Function]}
      >
        <p
          className="MuiTypography-root c2 MuiTypography-body1"
        >
          <span>
            Profession
          </span>
        </p>
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root c8"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </div>
      <div
        className="c9"
      >
        <p
          className="MuiTypography-root c10 MuiTypography-body1"
          onClick={[Function]}
        >
          Brewer
        </p>
        <p
          className="MuiTypography-root c10 MuiTypography-body1"
          onClick={[Function]}
        >
          Medic
        </p>
        <p
          className="MuiTypography-root c10 MuiTypography-body1"
          onClick={[Function]}
        >
          Prospector
        </p>
        <p
          className="MuiTypography-root c10 MuiTypography-body1"
          onClick={[Function]}
        >
          Gemcutter
        </p>
        <p
          className="MuiTypography-root c10 MuiTypography-body1"
          onClick={[Function]}
        >
          Mason
        </p>
        <p
          className="MuiTypography-root c10 MuiTypography-body1"
          onClick={[Function]}
        >
          Tailor
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`village-card and village-list Component render test renders village-list component correctly 1`] = `
Array [
  .c1 {
  display: grid;
  border: 1px solid;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 5px;
  margin: 15px;
  grid-template-columns: 40% 60%;
  gap: 1px;
  width: 400px;
  height: 550px;
}

.c2 {
  background-size: 100% 100% !important;
}

.c3 span {
  font-variant: all-small-caps;
}

.c11 {
  cursor: pointer;
}

.c11 span {
  font-variant: all-small-caps;
}

.c11:hover {
  background-color: lightgrey;
  border-radius: 4px;
}

.c5 {
  background-color: Green;
  width: 20px;
  height: 20px;
  margin-left: 10px;
  border-radius: 6px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  margin: 10px 0 !important;
  border-bottom: 1px solid;
}

.c6 span {
  font-variant: all-small-caps;
}

.c9 {
  margin-left: 90px;
}

.c7 {
  margin: 0 15px;
}

.c8 {
  cursor: pointer;
  border-bottom: 1px solid;
  margin-bottom: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  display: none;
}

.c0 {
  -webkit-flex: 0 1 150px;
  -ms-flex: 0 1 150px;
  flex: 0 1 150px;
}

@media (max-width:767px) {
  .c1 {
    grid-template-columns: auto;
    grid-template-rows: 25% 75%;
    width: 250px;
    height: 650px;
  }
}

@media (max-width:767px) {
  .c3 {
    font-size: 12px !important;
  }
}

@media (max-width:767px) {
  .c11 {
    font-size: 12px !important;
  }
}

@media (max-width:767px) {
  .c5 {
    width: 15px;
    height: 15px;
  }
}

@media (max-width:767px) {

}

@media (max-width:767px) {
  .c6 {
    font-size: 12px !important;
  }
}

@media (max-width:767px) {
  .c9 {
    margin-left: 120px;
  }
}

<div
    className="c0"
  >
    <div
      className="MuiPaper-root MuiCard-root c1 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        className="MuiCardMedia-root c2"
        style={
          Object {
            "backgroundImage": "url(\\"http://www.publicdomainpictures.net/pictures/120000/nahled/white-hen.jpg\\")",
          }
        }
      />
      <div
        className=""
      >
        <div
          className="MuiCardContent-root "
        >
          <h2
            className="MuiTypography-root c3 MuiTypography-h6 MuiTypography-gutterBottom"
          >
            Fizkin Voidbuster
          </h2>
          <p
            className="MuiTypography-root c3 MuiTypography-body1"
          >
            <span>
              Age: 
            </span>
            288
          </p>
          <p
            className="MuiTypography-root c3 MuiTypography-body1"
          >
            <span>
              Weight: 
            </span>
            35.279167
          </p>
          <p
            className="MuiTypography-root c3 MuiTypography-body1"
          >
            <span>
              Height: 
            </span>
            110.43628
          </p>
          <div
            className="c4"
          >
            <p
              className="MuiTypography-root c3 MuiTypography-body1"
            >
              <span>
                Hair Color: 
              </span>
              Green
            </p>
            <div
              className="c5"
              color="Green"
            />
          </div>
          <p
            className="MuiTypography-root c6 MuiTypography-body1"
          >
            Friends
          </p>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
            onClick={[Function]}
          >
            <p
              className="MuiTypography-root c3 MuiTypography-body1"
            >
              <span>
                Profession
              </span>
            </p>
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root c9"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            className="c10"
          >
            <p
              className="MuiTypography-root c11 MuiTypography-body1"
              onClick={[Function]}
            >
              Brewer
            </p>
            <p
              className="MuiTypography-root c11 MuiTypography-body1"
              onClick={[Function]}
            >
              Medic
            </p>
            <p
              className="MuiTypography-root c11 MuiTypography-body1"
              onClick={[Function]}
            >
              Prospector
            </p>
            <p
              className="MuiTypography-root c11 MuiTypography-body1"
              onClick={[Function]}
            >
              Gemcutter
            </p>
            <p
              className="MuiTypography-root c11 MuiTypography-body1"
              onClick={[Function]}
            >
              Mason
            </p>
            <p
              className="MuiTypography-root c11 MuiTypography-body1"
              onClick={[Function]}
            >
              Tailor
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .c1 {
  display: grid;
  border: 1px solid;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 5px;
  margin: 15px;
  grid-template-columns: 40% 60%;
  gap: 1px;
  width: 400px;
  height: 550px;
}

.c2 {
  background-size: 100% 100% !important;
}

.c3 span {
  font-variant: all-small-caps;
}

.c7 {
  cursor: pointer;
}

.c7 span {
  font-variant: all-small-caps;
}

.c7:hover {
  background-color: lightgrey;
  border-radius: 4px;
}

.c5 {
  background-color: Red;
  width: 20px;
  height: 20px;
  margin-left: 10px;
  border-radius: 6px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  margin: 10px 0 !important;
  border-bottom: 1px solid;
}

.c6 span {
  font-variant: all-small-caps;
}

.c10 {
  margin-left: 90px;
}

.c8 {
  margin: 0 15px;
}

.c9 {
  cursor: pointer;
  border-bottom: 1px solid;
  margin-bottom: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  display: none;
}

.c0 {
  -webkit-flex: 0 1 150px;
  -ms-flex: 0 1 150px;
  flex: 0 1 150px;
}

@media (max-width:767px) {
  .c1 {
    grid-template-columns: auto;
    grid-template-rows: 25% 75%;
    width: 250px;
    height: 650px;
  }
}

@media (max-width:767px) {
  .c3 {
    font-size: 12px !important;
  }
}

@media (max-width:767px) {
  .c7 {
    font-size: 12px !important;
  }
}

@media (max-width:767px) {

}

@media (max-width:767px) {
  .c5 {
    width: 15px;
    height: 15px;
  }
}

@media (max-width:767px) {
  .c6 {
    font-size: 12px !important;
  }
}

@media (max-width:767px) {
  .c10 {
    margin-left: 120px;
  }
}

<div
    className="c0"
  >
    <div
      className="MuiPaper-root MuiCard-root c1 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        className="MuiCardMedia-root c2"
        style={
          Object {
            "backgroundImage": "url(\\"http://www.publicdomainpictures.net/pictures/30000/nahled/maple-leaves-background.jpg\\")",
          }
        }
      />
      <div
        className=""
      >
        <div
          className="MuiCardContent-root "
        >
          <h2
            className="MuiTypography-root c3 MuiTypography-h6 MuiTypography-gutterBottom"
          >
            Malbin Chromerocket
          </h2>
          <p
            className="MuiTypography-root c3 MuiTypography-body1"
          >
            <span>
              Age: 
            </span>
            166
          </p>
          <p
            className="MuiTypography-root c3 MuiTypography-body1"
          >
            <span>
              Weight: 
            </span>
            35.88665
          </p>
          <p
            className="MuiTypography-root c3 MuiTypography-body1"
          >
            <span>
              Height: 
            </span>
            106.14395
          </p>
          <div
            className="c4"
          >
            <p
              className="MuiTypography-root c3 MuiTypography-body1"
            >
              <span>
                Hair Color: 
              </span>
              Red
            </p>
            <div
              className="c5"
              color="Red"
            />
          </div>
          <p
            className="MuiTypography-root c6 MuiTypography-body1"
          >
            Friends
          </p>
          <p
            className="MuiTypography-root c7 MuiTypography-body1"
            onClick={[Function]}
          >
            Fizwood Voidtossle
          </p>
        </div>
        <div
          className="c8"
        >
          <div
            className="c9"
            onClick={[Function]}
          >
            <p
              className="MuiTypography-root c3 MuiTypography-body1"
            >
              <span>
                Profession
              </span>
            </p>
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root c10"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            className="c11"
          >
            <p
              className="MuiTypography-root c7 MuiTypography-body1"
              onClick={[Function]}
            >
              Cook
            </p>
            <p
              className="MuiTypography-root c7 MuiTypography-body1"
              onClick={[Function]}
            >
              Baker
            </p>
            <p
              className="MuiTypography-root c7 MuiTypography-body1"
              onClick={[Function]}
            >
              Miner
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
